<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/editBookName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/book_page_book_name"
        android:inputType="text"
        android:textColorHint="#260705" />

    <EditText
        android:id="@+id/editBookPageCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/book_page_book_page_count"

        android:inputType="text"
        android:textColorHint="#260705" />

    <EditText
        android:id="@+id/editBookReadCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/edit_book_read_count"
        android:inputType="text"
        android:textColorHint="#260705" />
</LinearLayout>