<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".useraction.LoginFragment"
    android:background="#734652">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F2B1A2"
            android:orientation="vertical"
            android:padding="25dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_book_24" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_page_text"
                android:textSize="35sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:textColor="#260705"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_page_subtext"
                android:textSize="25sp"
                android:textStyle="italic"
                android:layout_marginTop="10dp"
                android:textColor="#260705"/>

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_marginTop="40dp"
                android:textSize="20sp"
                android:hint="@string/login_page_email"/>

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginTop="40dp"
                android:textSize="20sp"
                android:hint="@string/login_page_password"/>

            <TextView
                android:id="@+id/loginToRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_page_register"
                android:textStyle="italic"
                android:textColor="#260705"
                android:layout_marginTop="20dp"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/loginSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_page_button"
                android:textSize="20sp"
                android:padding="20sp"
                android:backgroundTint="#260705"
                android:layout_marginTop="30dp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>